# Radiohead

./: .env  .env.example  .gitignore  README.md  import meshtastic.py  pyproject.toml
scripts/: install_service.sh  run_dev.sh
src/meshtastic_llm_bridge/: __init__.py  __main__.py  config.py  main.py  meshtastic_client.py  ollama_client.py  prompt.py  storage.py
src/meshtastic_llm_bridge/utils/: logging.py
systemd/: meshtastic-llm-bridge.service
tests/: test_config.py  test_prompt.py
