[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic-llm-bridge"
version = "0.1.0"
description = "Raspberry Pi bridge between Meshtastic and a local Ollama LLM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Radiohead"}]
dependencies = [
  "httpx>=0.27.0",
  "meshtastic>=2.3.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
]

[project.scripts]
meshtastic-llm-bridge = "meshtastic_llm_bridge.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "ruff>=0.4.0",
  "black>=24.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
